--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,24 @@ body{
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
     font-weight: normal;
+    color: #585858;
+    line-height: 21px;
+}
+img{
+    max-width: 100%;
+    display: block;
+}
+a{
+    text-decoration: none;
+}
+p{
+    margin: 0;
+}
+h1, h2, h3, h4, h5, h6{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500;
+    margin: 0;
+    color: #111111;
 }
 div{
     display: block;
@@ -53,4 +71,116 @@ div{
     overflow: auto;
     display: flex;
     align-items: center;
+}
+/*Hero section Style*/
+.hero-section{
+    background-image: url('../images/slider-img.jpg');
+    background-size: cover;
+    background-position: center;
+}
+.hero-heading{
+    padding: 20% 0;
+}
+.hero-heading h2{
+    font-size: 40px;
+    color: #fff;
+    line-height: 55px;
+}
+/*Services Style*/
+.services{
+    overflow: hidden;
+    padding-top: 115px;
+    padding: 105px;
+}
+.service-item{
+    width: 22.33333%;
+    float: left;
+    text-align: center;
+    margin: 0 15px;
+}
+.s_icon{
+    margin-bottom: 35px;
+}
+.s_icon img{
+    margin-left: auto;
+    margin-right: auto;
+}
+.service-item h3{
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+/*company overview*/
+
+.company-overview{
+    padding-top: 80px;
+    padding-bottom: 90px;
+    background: #e7edeb;
+    text-align: center;
+    overflow: hidden;
+}
+.company-overview h2,
+.feature-work h2{
+    font-size: 40px;
+    margin-bottom: 35px;
+}
+.company-overview p{
+    font-size: 18px;
+    width: 70%;
+    margin: 0 auto;
+    line-height: 28px;
+}
+.company-overview h5{
+    font-size: 22px;
+    margin: 25px 0;
+    color: #585858;
+}
+.viewmorebtn{
+    padding: 15px 35px;
+    background-color: #ed2525;
+    color: #fff;
+    font-size: 20px;
+    text-transform: uppercase;
+    display: inline-block;
+}
+/*Feature Work*/
+.feature-work{
+    padding: 105px 0;
+    overflow: hidden;
+}
+.feature-work h2{
+    text-align: center;
+}
+.feature-work p{
+    width: 70%;
+    margin: 0 auto;
+    text-align: center;
+}
+.cat-links{
+    margin: 75px 0;
+}
+.cat-links ul{
+    text-align: center;
+}
+.cat-links ul li{
+    list-style: none;
+    display: inline-block;
+}
+.cat-links ul li a{
+    font-size: 18px;
+    color: #111111;
+    font-weight: 600;
+    padding: 10px 35px;
+    text-transform: uppercase;
+}
+.cat-links ul li a:hover{
+    background-color: #ed2525;
+    color: #fff;
+    transition: all 0.5s;
+}
+
+.work-item{
+    width: 25%;
+    float: left;
+    overflow: hidden;
 }
